--- a/src/Home/styles/Home.css
+++ b/src/Home/styles/Home.css
@@ -1,7 +1,7 @@
 .Home{
     width: 100vw;
     height: 100vh;
-    background: url('https://cdn.pixabay.com/photo/2016/01/27/15/25/space-1164579_960_720.png');
+    background: url('http://meioambiente.culturamix.com/blog/wp-content/gallery/2_27/fusao-e-brilho-das-estrelas-2.jpg');
     color: yellow;
     display: flex;
 }
