--- a/src/Navbar/styles/Navbar.css
+++ b/src/Navbar/styles/Navbar.css
@@ -7,7 +7,7 @@
     list-style: none;
     justify-content: space-around;
     align-items: center;
-    background: url('https://cdn.pixabay.com/photo/2016/01/27/15/25/space-1164579_960_720.png');
+    background: url('http://meioambiente.culturamix.com/blog/wp-content/gallery/2_27/fusao-e-brilho-das-estrelas-2.jpg');
     text-decoration: none;  
 }
 
