--- a/src/CharacterDetails/styles/Details.css
+++ b/src/CharacterDetails/styles/Details.css
@@ -1,5 +1,5 @@
 .Details-list{
-    background: url('https://cdn.pixabay.com/photo/2016/01/27/15/25/space-1164579_960_720.png');
+    background: url('http://meioambiente.culturamix.com/blog/wp-content/gallery/2_27/fusao-e-brilho-das-estrelas-2.jpg');
     color: yellow;
     z-index: 1000;
     list-style: none;
@@ -17,5 +17,8 @@
     border: 1px solid yellow;
     border-radius: 11px;    
     cursor: pointer;
-    transform: translate(10s)
+    transform: translate(10s);
+     max-width:100px;
+     min-height: 20px;
+     align-self: center;
 }
