--- a/src/List/styles/PeopleList.css
+++ b/src/List/styles/PeopleList.css
@@ -2,9 +2,10 @@
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-auto-rows: 300px;
-    margin-bottom: 300px;
+    margin-bottom: 50px;
 }
 .Char-container{
+    border-radius: 2%;
     display: block;
     flex-direction: column;
     border: 1px solid black;
@@ -16,6 +17,8 @@
 .Char-container:hover{
     box-shadow: 10px 10px #ccc;
     margin: 10px;
+    border-radius: 5%;
+    transition: .5s;
 }
 
 .Container-name, .Container-height{
@@ -34,5 +37,6 @@
     height: 90px;
     min-height: 80px;
 }
+
 
 
